<resources>
    <string name="app_name">ServerAndroidAssignmentApp</string>
    <string name="full_name">Họ tên</string>
    <string name="user_name">Tên đăng nhập</string>
    <string name="password">Mật khẩu</string>
    <string name="re_password">Nhập lại mật khẩu</string>
    <string name="address">Địa chỉ</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="register">Đăng ký</string>
    <string name="register_successfully">Đăng ký thành công!</string>
    <string name="an_occured_error">Có lỗi xảy ra, vui lòng thử lại sau</string>
    <string name="checking_field">Vui lòng kiểm tra lại các trường đã nhập</string>
    <string name="guest">Khách</string>
    <string name="please_wait">Xin chờ...</string>
    <string name="login">Đăng nhập</string>
    <string name="slogan">Easy Shopping, easy life!</string>
    <string name="profile">Hồ sơ</string>
    <string name="accept">Đồng ý</string>
    <string name="cancel">Thoát</string>
    <string name="logout_confirm">Bạn có muốn đăng xuất không?</string>
    <string name="choose_avatar">Chọn ảnh đại diện</string>
    <string name="change_avatar_successfully">Đổi avatar thành công</string>
    <string name="product">Sản phẩm</string>
    <string name="your_cart">Giỏ hàng</string>
    <string name="login_to_shopping">Vui lòng đăng nhập để mua hàng</string>
    <string name="empty_cart">Giỏ hàng trống</string>
    <string name="total_money">Tổng tiền:</string>
    <string name="delete_cart_confirm">Bạn có muốn xóa sản phẩm này khỏi giỏ hàng của mình không?</string>
    <string name="product_has_been_added_to_cart">Sản phẩm đã được thêm vào giỏ hàng</string>
    <string name="purchase_now">Thanh toán ngay</string>
    <string name="bill_has_been_created">Hóa đơn của bạn đã được tạo thành công</string>
    <string name="bill">Hóa đơn</string>
    <string name="bill_empty">Không có hóa đơn được gửi từ khách hàng nào</string>
    <string name="purchased">Đã thanh toán</string>
    <string name="check_bill_confirm">Bạn có chắc là khách hàng này đã thanh toán đủ số tiền là</string>
    <string name="make_purchase_successfully">Hóa đơn này đã được xác thực thanh toán thành công</string>
    <string name="delete_bill_confirm">Bạn có chắc muốn xóa hóa đơn này không</string>
</resources>
