<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg_bsdf"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintContent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:paddingBottom="70dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintToolbar"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/ic_chevron_left_black_24dp"
                android:tint="@color/colorWhite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvToolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/register"
                android:textColor="@color/colorWhite"
                app:layout_constraintBottom_toBottomOf="@+id/imgBack"
                app:layout_constraintStart_toEndOf="@+id/imgBack"
                app:layout_constraintTop_toTopOf="@+id/imgBack" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/edtUserName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:drawableLeft="@drawable/ic_account_box_black_24dp"
            android:drawablePadding="8dp"
            android:drawableTint="@color/colorPrimary"
            android:ems="10"
            android:hint="@string/user_name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintToolbar" />

        <EditText
            android:id="@+id/edtFullName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:drawableLeft="@drawable/ic_account_box_black_24dp"
            android:drawablePadding="8dp"
            android:drawableTint="@color/colorPrimary"
            android:ems="10"
            android:hint="@string/full_name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtUserName" />

        <EditText
            android:id="@+id/edtAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:drawableLeft="@drawable/ic_map_black_24dp"
            android:drawablePadding="8dp"
            android:drawableTint="@color/colorPrimary"
            android:ems="10"
            android:hint="@string/address"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtFullName" />

        <EditText
            android:id="@+id/edtPhoneNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:drawableLeft="@drawable/ic_contact_phone_black_24dp"
            android:drawablePadding="8dp"
            android:drawableTint="@color/colorPrimary"
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtAddress" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:drawableLeft="@drawable/ic_lock_black_24dp"
            android:drawablePadding="8dp"
            android:drawableTint="@color/colorPrimary"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtPhoneNumber" />

        <EditText
            android:id="@+id/edtRePassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:drawableLeft="@drawable/ic_lock_black_24dp"
            android:drawablePadding="8dp"
            android:drawableTint="@color/colorPrimary"
            android:ems="10"
            android:hint="@string/re_password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtPassword" />

        <Button
            android:background="@drawable/bg_button"
            android:textColor="@color/colorWhite"
            android:id="@+id/btnSubmit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAllCaps="false"
            android:text="@string/register"
            app:layout_constraintEnd_toEndOf="@+id/edtRePassword"
            app:layout_constraintStart_toStartOf="@+id/edtRePassword"
            app:layout_constraintTop_toBottomOf="@+id/edtRePassword" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>